--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -50,17 +50,23 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN}}
 
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v3
 
       - name: Build and push
-        uses: docker/build-push-action@v5
-        with:
-          context: ./
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi:latest
+         id: docker_build
+         uses: docker/build-push-action@v2
+         with:
+           context: ./
+           file: ./Dockerfile
+           builder: ${{ steps.buildx.outputs.name }}
+           push: true
+           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi:latest
+           cache-from: type=local,src=/tmp/.buildx-cache
+           cache-to: type=local,dest=/tmp/.buildx-cache
+       - name: Image digest
+         run: echo ${{ steps.docker_build.outputs.digest }}
