--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -30,7 +30,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: pulling git repo
         uses: actions/checkout@v2
