--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -30,14 +30,14 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
     - name: pulling git repo
-        uses: actions/checkout@v2
+      uses: actions/checkout@v2
     - name: Install python version 3.9
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.9"
+      uses: actions/setup-python@v2
+      with:
+        python-version: "3.9"
     - name: update pip
       run: python -m pip install --upgrade pip
     - name: install all dependencies
