--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -37,7 +37,9 @@ jobs:
     - name: Install python version 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9
+        python-version: "3.9"
+    - name: update pip
+      run: python -m pip install --upgrade pip
     - name: install all dependencies
       run: pip install -r requirements.txt
 
